Fix alignment of Configure Server panel headings

--- a/web/css/src/themes/default.css
+++ b/web/css/src/themes/default.css
@@ -2101,6 +2101,10 @@
 		top: 0;
 		right: 15px;
 	}
+
+	& .fas {
+		min-width: 20px;
+	}
 }
 
 .collapse-content {
